# developersnotebook

./: .dockerignore  .editorconfig  .gitignore  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  Windows.md  autogen.sh  autotools.sh  bootstrap  configure  configure.ac  package-lock.json  package.json  sections.txt
bundler/: Info.plist  developersnotebook.bundle
config/: css.json
docker/: Dockerfile-deb  cmd-deb.sh
images/: dashboard-icon.idraw  devnotebook.idraw  projects-icon.idraw
pkg/: developersnotebook.desktop
pkg/DEBIAN/: control  postinst
pkg/macos/: Info.plist
resources/: release-notes.html  release-notes.rtf
resources/macos/: Info.plist  icon.icns
scripts/: build.js  create-linux-bundle.sh  create-mac-app-bundle.sh  package-deb.sh
src/: Makefile.am  SqliteConnectionManager.cpp  constants.cpp  constants.hpp  main.cpp
src/components/: MacModal.mm  Modal.hpp
src/db/: SqliteConnectionManager.cpp  SqliteConnectionManager.hpp  SqliteSchema.cpp  SqliteSchema.hpp
src/models/: AbstractSqliteModel.cpp  AbstractSqliteModel.hpp  PreferencesModel.cpp  PreferencesModel.hpp  ProjectModel.cpp  ProjectModel.hpp  ProjectsModel.cpp  ProjectsModel.hpp  SqliteConnectionManager.cpp  SqliteConnectionManager.hpp
src/resources/: Css.cpp  Css.hpp  Image.cpp  Image.hpp  Resource.cpp  Resource.hpp
src/scss/: _dashboardView.scss  _elements.scss  _mainWindow.scss  _projectsView.scss  dark.scss
src/util/: Image.cpp  Image.hpp  MacModal.h  MacModal.m  MacModal.mm  MacModalInterface.hpp  Modal.cpp  Modal.hpp
src/views/: AbstractView.cpp  AbstractView.hpp  DashboardView.cpp  DashboardView.hpp  HomeView.cpp  HomeView.hpp  ProjectsView.cpp  ProjectsView.hpp
src/windows/: AboutDialog.cpp  AboutDialog.hpp  MacWindowManager.h  MacWindowManager.mm  MacWindowManagerInterface.hpp  MainWindow.cpp  MainWindow.hpp  MenuBar.cpp  MenuBar.hpp  ReleaseNotesWindow.cpp  ReleaseNotesWindow.hpp  WindowRegistry.cpp  WindowRegistry.hpp
